[package]
name = "rs485-testbed"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "~0.2"
cortex-m = "~0.6"
cortex-m-semihosting = "~0.3"
cortex-m-rtfm = "~0.5"
feather_m0 = { version = "~0.6", features = ["unproven"] }
palantir = { git = "https://github.com/PinballWizards/palantir.git", branch = "master" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
